name:                lisp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kumatoki/lisp#readme
license:             BSD3
license-file:        LICENSE
author:              kumatoki
maintainer:          higumaido@gmail.com
copyright:           MIT
category:            Any
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lisp.AST,
                       Lisp.Parser,
                       Lisp.Eval,
                       Lisp
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       directory,
                       parsec
  default-language:    Haskell2010

executable lisp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lisp
  default-language:    Haskell2010

test-suite lisp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lisp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kumatoki/lisp
